# otel-observability

./: .env.example  .gitignore  Makefile  README.md  cloudformation.yml  scripts.sh
apps/auth-service/: .env.example  .gitignore  Dockerfile  app.py  config.py  instrumentation.py  pyproject.toml  repository.py
apps/files-service/: .env.example  Dockerfile  app.py  buildspec.yml  config.py  dependencies.py  instrumentation.py  pyproject.toml  run.sh
apps/files-service/middlewares/: tracer.py
apps/files-service/repositories/: files.py
apps/files-service/services/: auth.py  aws.py
apps/frontend/: Dockerfile  index.html  package-lock.json  package.json
apps/frontend/src/: App.jsx
apps/frontend/src/components/: config-form.jsx  file-picker-btn.jsx  files-to-upload.jsx  icons.jsx  uploaded-files.jsx
apps/frontend/src/instrumentation/: otel.js
apps/frontend/src/lib/: config.js  fetchs.js  files.js
apps/frontend/src/services/: files.js  tokens.js
apps/load-pipeline/: .env.example  .gitignore  buildspec.yml  pyproject.toml  run.py
apps/load-pipeline/src/: app.py  instrumentation.py  services.py
cloudformation/: main.yml
docs/diagrams/: entire_process.txt
observability/: docker-compose.yaml  otel-collector-config.yaml
scripts/: apps.sh  base.sh  entrypoint.sh  infra.sh
